--- a/abstract.tex
+++ b/abstract.tex
@@ -1,7 +1,7 @@
 Using a \acl{CAP} which was tuned specifically to reproduce eigenenergies
 obtained in a single-particle picture using a complex self-energy, we are able
-to model the effect of coupling of a quantum device to leads within a \ac{CI}
-(many-body) formalism. For two different degrees of device-lead coupling, the
-effect of electron correlation on the shifts and broadenings of quasiparticle
-levels is studied by decreasing the threshold for inclusion of
-Configuration State Functions into the \ac{CI} vector.
+to model the effect of coupling of a quantum device to semi-infinite leads
+within a \ac{CI} (many-body) formalism. For two different degrees of
+device-lead coupling, the effect of electron correlation on the shifts and
+broadenings of quasiparticle levels is studied by decreasing the threshold for
+inclusion of Configuration State Functions into the \ac{CI} vector.
