unset twocolumn for readability

--- a/paper.tex
+++ b/paper.tex
@@ -2,13 +2,15 @@
 %     Created: Tue Feb 21 05:00  2012 G
 % Last Change: Tue Feb 21 05:00  2012 G
 %
-\documentclass[a4paper, twocolumn]{article}
+\documentclass[a4paper]{article}
+%\documentclass[a4paper, twocolumn]{article}
 
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{subfig}
 \usepackage{graphicx}
 \usepackage{acronym}
+\usepackage{cite}
 
 \author{Mark Szepieniec, Irene Yeriskin, Jim Greer}
 \title{Evaluation of Quasiparticle Levels in Correlated Gold Chains Using
@@ -33,7 +35,7 @@
 \input{body}
 
 \bibliographystyle{unsrt}
-\bibliography{irenes_bib}
+\bibliography{bibliography}
 
 \end{document}
 
