changed NEGF acronym expansion

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -3,6 +3,6 @@
 \acrodef{CSF}{Configuration State Function}
 \acrodef{CI}{Configuration Interaction}
 \acrodef{DFT}{Density Functional Theory}
-\acrodef{NEGF}{Non-Equilibrium Green Function}
+\acrodef{NEGF}{Nonequilibrium Green's Function}
 \acrodef{HOMO}{Highest Occupied Molecular Orbital}
 \acrodef{LUMO}{Lowest Unoccupied Molecular Orbital}
