--- a/acronyms.tex
+++ b/acronyms.tex
@@ -6,3 +6,5 @@
 \acrodef{NEGF}{Nonequilibrium Green's Function}
 \acrodef{HOMO}{Highest Occupied Molecular Orbital}
 \acrodef{LUMO}{Lowest Unoccupied Molecular Orbital}
+\acrodef{IP}{Ionization Potential}
+\acrodef{EA}{Electron Affinity}
