--- a/body.tex
+++ b/body.tex
@@ -417,5 +417,14 @@ captured at the level of single excitations.
 
 \section{Conclusions}
 
+In this work we presented what to our knowledge are the first application
+of wavefunction methods to the study of semi-infinite systems using a
+self-energy-derived complex absorbing potential. For different degrees of
+molecule-lead coupling and different levels of correlation, the complex
+quasiparticle peaks of system consisting of an atomic gold chain were
+evaluated. The ability to accurately describe these levels (which in this case
+correspond to \ac{IP} and \ac{EA}) has been shown to be closely related to an
+accurate description of transport~\cite{golden}.
+
 \label{sec:conclusions}
 
