--- a/body.tex
+++ b/body.tex
@@ -263,13 +263,14 @@ differences of many-body energies: $E^N - E^{N-1}$ yields the \ac{HOMO}, while
 likewise $E^{N+1} - E^N$ yields the \ac{LUMO} (other quasiparticle levels can be
 obtained by taking differences of excited many-body energies). The peaks for
 the \ac{HOMO} and \ac{LUMO} of the system obtained in this way are plotted in
-figure~\ref{fig:nobranch45A}. There is good correspondence in the position of the
-peaks, but the single determinant difference peaks are significantly broader
-than their transmission spectrum counterparts. The only difference with the
-single-particle eigenvalue picture previously shown is that now, as mentioned
-earlier, we have projected the eigenvectors into the $\um{X}$ basis (eigenbasis
-of $\um{H}_0$) instead of representing them in their natural basis $\um{U}$
-(left eigenbasis of $\um{H}_0 + \um{W}$).
+figures~\ref{fig:nobranch45A} and \ref{fig:nobranch40A}. There is good
+correspondence in the position of the peaks, but the single determinant
+difference peaks are significantly broader than their transmission spectrum
+counterparts. The only difference with the single-particle eigenvalue picture
+previously shown is that now, as mentioned earlier, we have projected the
+eigenvectors into the $\um{X}$ basis (eigenbasis of $\um{H}_0$) instead of
+representing them in their natural basis $\um{U}$ (left eigenbasis of
+$\um{H}_0 + \um{W}$).
 % The reason for this is that our \ac{CI} code is constrained to work with a real
 % basis of MOs.
 
@@ -302,6 +303,15 @@ the non-reference \acp{CSF}, the wave function obtained by diagonalizing in
 this space would still be describable as a single determinant (and
 thus, by definition, contain no correlation), but by adding degrees of freedom
 to the system, a degree of self-consistency is attained. 
+
+We make a distinction between two types of ``singles'' \ac{CI} vectors: for the
+``restricted'' calculations, the \ac{CI} space was truncated to contain only
+excitations from and to MOs of the molecule (this set was found by comparing
+the real parts of the complex eigenvalues $\omega_i$ with the positions of the
+peaks of the respective transmission spectrum). The ``unrestricted''
+calculations contain the full singles \ac{CI} vector, i.e. all single
+excitations plus the reference determinant. The results are plotted in
+figures~\ref{fig:nobranch45A} and \ref{fig:nobranch40A}.
 
 At this point, it is useful to compare the error in the two cases discussed
 thus far. To relate the many-body energies to the single-particle levels, we
@@ -359,13 +369,13 @@ the 0.45 nm system with 68 electrons.
 
 For the single determinant case, we obtain good agreement in the real part, but
 a significant error in the imaginary part, consistent with behaviour plotted in
-\ref{fig:nobranch45A}. Again, this is due to the real basis not being well able
-to reproduce imaginary eigenvectors. For the single excitations case, the
-situation is reversed; for the real part we get an error which we ascribe to
-the finite expansion (Thouless' theorem is only valid in an infinite basis),
-whereas for the imaginary part we get good agreement, due to the fact that our
-complex \ac{CI} code was able to assign complex coefficients to the \acp{CSF}
-and thus reproduce the imaginary part of the energy better.
+figure~\ref{fig:nobranch45A}. Again, this is due to the real basis not being 
+well able to reproduce imaginary eigenvectors. For the single excitations case,
+the situation is reversed; for the real part we get an error which we ascribe
+to the finite expansion (Thouless' theorem is strictly only valid in an
+infinite basis), whereas for the imaginary part we get good agreement, due to
+the fact that our complex \ac{CI} code was able to assign complex coefficients
+to the \acp{CSF} and thus reproduce the imaginary part of the energy better.
 
 \subsection{Complex \ac{CI}}
 
@@ -377,18 +387,15 @@ in figure~\ref{fig:cihomo} for the \ac{HOMO}, and figure~\ref{fig:cilumo}
 for the \ac{LUMO}. The curves labeled ``unrestricted'' indicate that the \ac{CI}
 procedure was not limited to MOs on the molecule; MOs localized on the lead
 sections of the device were also included. Note that in this case, the QP gap
-widens, which would seem to be in contrast to earlier findings which indicated
-that screening effects on the metal leads renormalize the levels of the device,
-leading to lower gaps~\cite{thygesen_rubio, thygesen}. This behaviour persists
-however, in \ac{CI} calculations performed on the system in absence of a
-\acp{CAP}, indicating that this is a physical effect.
+widens as compared to the HF case, which would seem to be in contrast to
+earlier findings which indicated that screening effects on the metal leads
+renormalize the levels of the device, leading to lower
+gaps~\cite{thygesen_rubio, thygesen}. This behaviour persists however, in
+\ac{CI} calculations performed on the system in absence of a \acp{CAP},
+indicating that this is a physical effect.
 
-For the ``restricted'' calculations, the \ac{CI} space was truncated to contain
-only excitations from and to MOs of the molecule (this set was found by
-comparing the real parts of the complex eigenvalues $\omega_i$ with the
-positions of the peaks of the respective transmission spectrum). As can be seen
-in the figures, the \ac{CI} gap is slightly smaller than the HF gap, and
-decreases with increasing correlation, consistent with the HF and GW
+As can be seen in the figures, the \ac{CI} gap is slightly smaller than the HF
+gap, and decreases with increasing correlation, consistent with the HF and GW
 results in~\cite{thygesen_rubio, thygesenrubio2010corr}. In both cases the peak
 widths are larger than the corresponding transmssion (HF) peaks, but similar
 to the single excitations peaks, indicating that the broadening is accurately
@@ -416,15 +423,17 @@ captured at the level of single excitations.
 \end{figure}
 
 \section{Conclusions}
-
-In this work we presented what to our knowledge are the first application
-of wavefunction methods to the study of semi-infinite systems using a
-self-energy-derived complex absorbing potential. For different degrees of
-molecule-lead coupling and different levels of correlation, the complex
-quasiparticle peaks of system consisting of an atomic gold chain were
-evaluated. The ability to accurately describe these levels (which in this case
-correspond to \ac{IP} and \ac{EA}) has been shown to be closely related to an
-accurate description of transport~\cite{golden}.
-
 \label{sec:conclusions}
 
+In this work we presented what to our knowledge are the first application
+of wavefunction methods to the study of semi-infinite systems using acomplex
+absorbing potential. For different degrees of molecule-lead coupling and
+different levels of correlation, the complex quasiparticle peaks of a system
+consisting of atomic gold chains were evaluated.
+
+The ability to accurately describe these levels (which in this case
+correspond to \ac{IP} and \ac{EA}) has been shown to be closely related to an
+accurate description of transport~\cite{golden}. This work opens the door for
+the application of non-empirical wave funcion methods to the study of quantum
+transport in nanoscale systems in which the lifetime broadening is captured
+accurately by a self-energy-derived \ac{CAP}.
