added spectral density figure

--- a/body.tex
+++ b/body.tex
@@ -145,10 +145,21 @@ densities, $\Lambda_{L(R)}$ self-energy is used, we replace this with W.
 \end{subequations}
 
 We then analyse the obtained transmission against that using the NEGF formalism
-employed within the TIMES code. This comparison is shown in figure [TODO],
-showing the extent of agreement between the two approaches. We note the good
-agreement between the two approaches especially in the energy frame of
-interest, \textit{i.e.} around the \ac{HOMO}-\ac{LUMO} gap.
+employed within the TIMES code. This comparison is shown in
+figure~\ref{fig:transdat}, showing the extent of agreement between the two
+approaches. We note the good agreement between the two especially in the energy
+frame of interest, \textit{i.e.} around the \ac{HOMO}-\ac{LUMO} gap.
+
+\begin{figure} 
+	\begin{center}
+		\includegraphics[width=0.9\linewidth]{figures/transdat.eps}
+	\end{center}
+	\caption{Transmission through the 0.45 nm (top) and 0.40 nm (bottom)
+	         systems. The red curve is a transmission spectrum obtained
+		 using a conventional self-energy, the green curve is obtained
+		 using a \ac{CAP}.}
+	\label{fig:transdat}
+\end{figure}
 
 % The goal is to introduce a matrix \umm{W} which mimics the effect of coupling
 % to a semi-infinite lead in a similar way as a complex self-energy
